# github-mcp

./: .gitignore  .mcp.json  README.md  github-mcp.mcpb  manifest.json  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: claude-code.yml  security-review.yml  test.yml
github_mcp/: __init__.py  client.py  server.py
hooks/: install-ping.py
tests/: test_smoke.py  test_ssrf.py
